--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Task Flow</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,7 @@
             <div class="app-icon">
                 <i class="fas fa-clipboard-list"></i>
             </div>
-            <h1>Task Flow</h1>
+            <h1>Task Management</h1>
             <p>Organize your tasks beautifully</p>
         </header>
 
@@ -45,9 +46,9 @@
                         <label for="priority" class="sr-only">Priority</label>
                         <div class="custom-select-wrapper">
                             <select id="priority">
-                                <option value="low">Low Priority</option>
-                                <option value="medium">Medium Priority</option>
-                                <option value="high">High Priority</option>
+                                <option value="minor">Minor Priority</option>
+                                <option value="moderate">Moderate Priority</option>
+                                <option value="top">Top Priority</option>
                             </select>
                             <span class="custom-select-arrow"></span>
                         </div>
@@ -59,8 +60,56 @@
                 </button>
             </form>
         </main>
+
+        <section class="task-list-section">
+            <div class="task-summary-card">
+                <div class="task-summary-item active" data-filter="all">
+                    <i class="fas fa-list-ul"></i> All Tasks <span class="task-count" id="allTasksCount">0</span>
+                </div>
+                <div class="task-summary-item" data-filter="pending">
+                    <i class="fas fa-hourglass-half"></i> Pending <span class="task-count" id="pendingTasksCount">0</span>
+                </div>
+                <div class="task-summary-item" data-filter="completed">
+                    <i class="fas fa-check-circle"></i> Completed <span class="task-count" id="completedTasksCount">0</span>
+                </div>
+            </div>
+
+            <div class="task-filters-card">
+                <div class="current-filter-display">
+                    <i class="fas fa-list-ul"></i> <span id="currentFilterText">All Tasks</span>
+                </div>
+                <div class="filter-controls">
+                    <div class="custom-select-wrapper filter-priority-wrapper">
+                        <select id="filterPriority">
+                            <option value="all">All Priorities</option>
+                            <option value="minor">Minor Priority</option>
+                            <option value="moderate">Moderate Priority</option>
+                            <option value="top">Top Priority</option>
+                        </select>
+                        <span class="custom-select-arrow"></span>
+                    </div>
+                    <button class="clear-filters-btn" id="clearFiltersBtn">
+                        <i class="fas fa-times"></i> Clear
+                    </button>
+                </div>
+            </div>
+
+            <div id="taskList" class="task-list">
+                </div>
+
+            <div id="emptyState" class="empty-state">
+                <div class="empty-state-icon">
+                    <i class="fas fa-clipboard"></i>
+                </div>
+                <p class="empty-state-text-large">No tasks yet. Add your first task above!</p>
+                <p class="empty-state-text-small">Your tasks will appear here once you create them.</p>
+            </div>
+
+        </section>
+
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="script.js"></script>
 </body>
 </html>
