--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="app-icon">
                 <i class="fas fa-clipboard-list"></i>
             </div>
-            <h1>Task Management</h1>
-            <p>Organize your tasks beautifully</p>
+            <h1 style="text-decoration: none; color: aliceblue;">Task Management</h1>
+            <p style="text-decoration: none; color: aliceblue;">Organize your tasks beautifully</p>
         </header>
 
         <main class="task-form-card">
